@@ -12,6 +12,7 @@ package com.cburch.logisim.util;
 import java.io.BufferedInputStream;
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.LinkedList;
@@ -109,7 +110,7 @@ public class ZipClassLoader extends ClassLoader {
           final var zipEntry = zipFile.getEntry(res);
           if (zipEntry != null) {
             final var url = "jar:" + zipPath.toURI() + "!/" + res;
-            ret = new URL(url);
+            ret = URI.create(url).toURL();
             if (DEBUG >= 3) logger.debug("  found: " + url);
           }
         }
